[project]
name = "ai-nemo-guardrials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.7",
    "nemoguardrails>=0.23.0",
    "openai>=2.44.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
